changed how SELECT switch is handled and made supporting changes to RESET handling and joystick trigger handling when used to start a game.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 ### list files
 *.lst
 
+### images
+*.png
+
 
 ## don't know why z26 keeps generating this file, but for now just ignore
 stdout.txt
