incorporated PAL/NTSC changes into the correct source file (tankmaze.asm) and cleaned up the repository some more by deleting minotaur.asm

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ stdout.txt
 minotaur.asm
 minotaur.bin
 minotaur.sym
+Minotaur.asm
+Minotaur.bin
+Minotaur.sym
 
 # Atari Dev Studio bin directory
 bin/
